# Statistics_NumericalIntegration_2.0

./: CMakeLists.txt  README.md  main.py  results.txt  setup.py  slide_setup.py
NumericalIntegrationModule/: CMakeLists.txt  IntegrationResults.txt  moduloCCMakeLists.txt
NumericalIntegrationModule/include/: IntegrationMethods.hpp  IntegrationMethods_py.hpp  moduleCfunctions.hpp  moduleCfunctions.tpl.hpp
NumericalIntegrationModule/src/: IntegrationMethods.cpp  IntegrationMethods.py  IntegrationMethods_py.cpp  moduleCfunctions_py.cpp
StatisticsModule/: CMakeLists.txt  moduloACMakeLists.txt  player_data_03_22_analysis.txt
StatisticsModule/include/: DataHandler.hpp  StatOp.hpp  StatOp_py.hpp
StatisticsModule/src/: DataHandler.cpp  DataHandler_py.cpp  StatOp.cpp
homework3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
main/: main.cpp  main.py  mainA.py  mainC.py
